# grasp_selection

./: CMakeLists.txt  README.md  package.xml  setup.py
include/grasp_selection/: grasp_scored.h  reaching.h  scoring.h  selection.h
launch/: select_grasps.launch
msg/: Grasp.msg  GraspList.msg
openrave/: baxter_ik.xml  manipulator_baxter_structure.xml  table.xml
openrave/kinematics.6cb3cfe161824340f42d684ed4252a1c/: ikfast69.Transform6D.10_11_12_13_14_15_f9.pp
rviz/: grasp_selection.rviz
scripts/: grasping_demo.py  ikfast_service.py  moveit_grasping.py  test.py
src/grasp_selection/: reaching.cpp  scoring.cpp  selection.cpp
src/nodes/: selection_node.cpp
srv/: SelectGrasps.srv  SolveIK.srv
