<?xml version="1.0"?>
<package>
  <name>grasp_selection</name>
  <version>0.0.0</version>
  <description>The grasp_selection package</description>
  <maintainer email="atp@ccs.neu.edu">andreas</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/grasp_selection</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>agile_grasp</build_depend>  
  <build_depend>cmake_modules</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>visualization_msgs</build_depend>
  
  <run_depend>agile_grasp</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>visualization_msgs</run_depend>
  
</package>
